# texgrep

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pytest.ini
.github/workflows/: smoke.yml
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/search/: apps.py  backends.py  opensearch_client.py  query.py  ratelimit.py  serializers.py  service.py  snippets.py  tasks.py  types.py  urls.py  views.py
backend/search/management/commands/: create_tex_index.py  tex_reindex.py
backend/search/providers/: __init__.py  opensearch.py  zoekt.py
backend/search/tests/: test_backend_contract.py  test_create_tex_index_command.py  test_indexer_pipeline.py  test_integration.py  test_opensearch_backend.py  test_opensearch_client_clauses.py  test_providers.py  test_query.py  test_ratelimit.py  test_regex_safety.py  test_reindex_task.py  test_serializers.py  test_snippets.py  test_views.py  test_zoekt_provider.py
backend/texgrep/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
data/samples/: sample_commands.tex
deploy/: docker-compose.yml
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/components/: ResultList.tsx  SearchForm.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
indexer/: __init__.py  build_index.py  fetch_samples.py  main.py  pipeline.py  preprocess.py
indexer/sample_corpus/: sample1.tex  sample2.tex  sample3.tex  sample4.tex  sample5.tex  sample6.tex  sample7.tex  sample8.tex
indexer/tests/: test_build_index.py  test_pipeline.py  test_preprocess.py
scripts/: __init__.py  bench_local.py
