[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texgrep-backend"
version = "0.1.0"
description = "Texgrep Django backend"
authors = [{ name = "texgrep" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "opensearch-py>=2.4",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "factory_boy>=3.3",
    "freezegun>=1.4",
    "ruff>=0.3",
]

[tool.setuptools]
packages = ["texgrep", "search"]
